--- a/Scroll/index.html
+++ b/Scroll/index.html
@@ -113,13 +113,33 @@
                     </article>
                 </div>
             </div>
-        </section>
+        </section> spremenjeno v article
+
+
+        
         <!-- services -->
-        <section id="services" class="section">
+        <article id="services" class="section">
             <div class="title">
                 <h2>Services</h2>
             </div>
-        </section>
+            <section class="printing-section-left">
+                <h2 class ="services-headers">3D-printing</h2>
+                <h3>ON DEMAND 3D PRINTED PARTS</h3>
+                <h4>Rapid prototyping & 3D printing services</h4>
+                <p class="printing-p"> - Manufacturing Aids, Jigs, and Fixtures <br>
+                    - End-use or Replacement Parts <br>
+                    - Prototypes for Form, Fit, Feel, Function<br>
+                    - Hyperrealistic Multi-Material Prototypes<br>
+                    - End-of-Arm Robotic Tools<br>
+                    - Volume Production of Parts for Manufacturing<br></p>
+            </section>
+            <section class="printing-section-right">
+                <button type="button"> Print!</button>
+            </section>
+        </article>
+
+
+
         <!-- Projects -->
         <section id="tours" class="section">
             <div class="title">
